@@ -1,3 +1,4 @@
 require "embedly/request/base"
 require "embedly/request/net_http"
 require "embedly/request/typhoeus"
+require "embedly/request/faraday"
